--- a/src/main/resources/InscriptionFormation.fxml
+++ b/src/main/resources/InscriptionFormation.fxml
@@ -1,99 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.ImageView?>
+<?import java.lang.String?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="336.0" prefWidth="250.0" stylesheets="@dashboardDesign.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="600.0" prefWidth="850.0" stylesheets="@dashboardDesign.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.InscriptionFormationController">
    <children>
-      <VBox layoutX="75.0" layoutY="25.0" prefHeight="250.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="9.0" layoutY="13.0" prefHeight="578.0" prefWidth="830.0" stylesheets="@dashboardDesign.css">
          <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="52.0" prefWidth="250.0">
+            <AnchorPane layoutX="-2.0" layoutY="43.0" prefHeight="527.0" prefWidth="830.0" stylesheets="@dashboardDesign.css">
+               <styleClass>
+                  <String fx:value="shadow" />
+                  <String fx:value="white-bg" />
+               </styleClass>
                <children>
-                  <Label contentDisplay="CENTER" prefHeight="18.0" prefWidth="121.0" styleClass="titre" text="Formation">
-                     <font>
-                        <Font name="Futura Heavy BT" size="14.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="5.0" />
-                     </HBox.margin>
-                  </Label>
-                  <Label text="NomFormation">
-                     <padding>
-                        <Insets right="5.0" />
-                     </padding>
-                  </Label>
-               </children>
-            </HBox>
-            <AnchorPane prefHeight="258.0" prefWidth="250.0">
-               <children>
-                  <ImageView fitHeight="138.0" fitWidth="207.0" layoutX="22.0" pickOnBounds="true" preserveRatio="true" />
-                  <HBox layoutX="14.0" layoutY="138.0" prefHeight="107.0" prefWidth="222.0">
-                     <children>
-                        <HBox prefHeight="107.0" prefWidth="123.0">
-                           <children>
-                              <VBox prefHeight="107.0" prefWidth="156.0">
-                                 <children>
-                                    <Label prefHeight="24.0" prefWidth="111.0" styleClass="titre" text="Artiste :">
-                                       <opaqueInsets>
-                                          <Insets />
-                                       </opaqueInsets>
-                                       <VBox.margin>
-                                          <Insets />
-                                       </VBox.margin>
-                                    </Label>
-                                    <Label prefHeight="24.0" prefWidth="83.0" styleClass="titre" text="Catégorie :">
-                                       <opaqueInsets>
-                                          <Insets />
-                                       </opaqueInsets>
-                                       <VBox.margin>
-                                          <Insets bottom="5.0" right="5.0" top="7.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                    <Label prefHeight="24.0" prefWidth="88.0" styleClass="titre" text="Niveau :">
-                                       <opaqueInsets>
-                                          <Insets />
-                                       </opaqueInsets>
-                                    </Label>
-                                 </children>
-                              </VBox>
-                           </children>
-                        </HBox>
-                        <HBox prefHeight="107.0" prefWidth="143.0">
-                           <children>
-                              <VBox prefHeight="107.0" prefWidth="139.0">
-                                 <children>
-                                    <Label prefHeight="26.0" prefWidth="91.0" text="NomArtiste" />
-                                    <Label prefHeight="26.0" prefWidth="91.0" text="NomCat">
-                                       <VBox.margin>
-                                          <Insets top="4.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                    <Label prefHeight="31.0" prefWidth="91.0" text="Nv">
-                                       <VBox.margin>
-                                          <Insets />
-                                       </VBox.margin>
-                                    </Label>
-                                 </children>
-                              </VBox>
-                           </children>
-                        </HBox>
-                     </children>
-                  </HBox>
+                   <ScrollPane layoutX="8.0" layoutY="8.0" prefHeight="514.0" prefWidth="814.0">
+                       <content>
+                           <AnchorPane>
+                               <children>
+                                   <GridPane fx:id="gridFor" layoutX="14.0" layoutY="14.0">
+                                       <!-- Define your column constraints here -->
+                                       <columnConstraints>
+                                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                           <!-- Add more ColumnConstraints if needed -->
+                                       </columnConstraints>
+                                       <!-- Define your row constraints here -->
+                                       <rowConstraints>
+                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                           <!-- Add more RowConstraints if needed -->
+                                       </rowConstraints>
+                                   </GridPane>
+                               </children>
+                           </AnchorPane>
+                       </content>
+                   </ScrollPane>
+
                </children>
             </AnchorPane>
-            <HBox alignment="CENTER" prefHeight="70.0" prefWidth="250.0">
-               <children>
-                  <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="75.0" styleClass="add-btn" stylesheets="@dashboardDesign.css" text="S'inscrire" />
-               </children>
-            </HBox>
+            <Text fill="#8cbeb2" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Liste des formations disponibles">
+               <font>
+                  <Font name="Futura Heavy BT" size="18.0" />
+               </font>
+            </Text>
          </children>
-      </VBox>
+      </AnchorPane>
    </children>
 </AnchorPane>
