--- a/src/main/resources/AfficherOeuvre.fxml
+++ b/src/main/resources/AfficherOeuvre.fxml
@@ -2,56 +2,51 @@
 
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="dashboardDesign.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AfficherOeuvreControler">
-    <children>
-        <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="400.0" prefWidth="600.0" stylesheets="@dashboardDesign.css">
-            <children>
-                <AnchorPane layoutX="134.0" layoutY="66.0" prefHeight="400.0" prefWidth="600.0" stylesheets="@dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <children>
-                        <AnchorPane layoutX="14.0" layoutY="15.0" prefHeight="371.0" prefWidth="571.0" stylesheets="@dashboardDesign.css">
-                            <children>
-                                <AnchorPane layoutY="14.0" prefHeight="295.0" prefWidth="571.0" stylesheets="@dashboardDesign.css">
-                                    <styleClass>
-                                        <String fx:value="white-bg" />
-                                        <String fx:value="shadow" />
-                                    </styleClass>
-                                    <children>
-                                        <TableView fx:id="OeuvreTable" layoutX="12.0" layoutY="53.0" prefHeight="232.0" prefWidth="546.0">
-                                            <columns>
-                                                <TableColumn fx:id="Ref" prefWidth="50.399967193603516" text="Ref" />
-                                                <TableColumn fx:id="nom_Oeuvre" prefWidth="93.5999755859375" text="Nom_Oeuvre" />
-                                                <TableColumn fx:id="img" prefWidth="156.00003662109373" text="img" />
-                                                <TableColumn fx:id="TypeOeuvre" prefWidth="88.79991149902344" text="TypeOeuvre" />
-                                                <TableColumn fx:id="note" prefWidth="52.00006103515625" text="note" />
-                                                <TableColumn fx:id="date_Publication" prefWidth="70.39996337890625" text="date_Puplication" />
-                                                <TableColumn fx:id="description" prefWidth="156.00003662109373" text="Description" />
-                                            </columns>
-                                        </TableView>
-                                        <TextField fx:id="searchOeuvre" layoutX="14.0" layoutY="14.0" promptText="    Rechercher" />
-                                    </children>
-                                </AnchorPane>
-                                <Button fx:id="delete" layoutX="235.0" layoutY="325.0" mnemonicParsing="false" onAction="#delete" prefHeight="35.0" prefWidth="88.0" styleClass="delete-btn" text="Supprimer" />
-                                <Button fx:id="update" layoutX="347.0" layoutY="325.0" mnemonicParsing="false" onAction="#ModifierOeuvre" prefHeight="35.0" prefWidth="106.0" styleClass="update-btn" text="Mettre à jour">
-                                    <font>
-                                        <Font name="Futura Book BT" size="12.0" />
-                                    </font>
-                                </Button>
-                                <Button fx:id="add" layoutX="463.0" layoutY="325.0" mnemonicParsing="false" onAction="#ajouterOeuvre" prefHeight="35.0" prefWidth="88.0" styleClass="add-btn" text="Ajouter">
-                                    <font>
-                                        <Font name="Futura Light BT" size="12.0" />
-                                    </font>
-                                </Button>
-                            </children>
+<AnchorPane prefHeight="579.0" prefWidth="823.0" stylesheets="@../../../../../../../tunArtProject-Ghaith-branch/src/main/resources/dashboardDesign.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AfficherController">
+   <children>
+      <AnchorPane layoutX="1.0" layoutY="3.0" prefHeight="610.0" prefWidth="823.0" stylesheets="@../../../../../../../tunArtProject-Ghaith-branch/src/main/resources/dashboardDesign.css">
+         <children>
+            <AnchorPane layoutX="14.0" layoutY="43.0" prefHeight="475.0" prefWidth="783.0" stylesheets="@../../../../../../../tunArtProject-Ghaith-branch/src/main/resources/dashboardDesign.css">
+               <styleClass>
+                  <String fx:value="shadow" />
+                  <String fx:value="white-bg" />
+               </styleClass>
+               <children>
+                  <ScrollPane layoutX="26.0" layoutY="64.0" prefHeight="414.0" prefWidth="711.0">
+                     <content>
+                        <AnchorPane>
+                           <children>
+                              <GridPane fx:id="grid" layoutX="14.0" layoutY="14.0">
+                                 <columnConstraints>
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                 </columnConstraints>
+                                 <rowConstraints>
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                 </rowConstraints>
+                              </GridPane>
+                           </children>
                         </AnchorPane>
-                    </children>
-                </AnchorPane>
-            </children>
-        </AnchorPane>
-    </children>
+                     </content>
+                  </ScrollPane>
+                  <TextField fx:id="searchOeuvre" layoutX="26.0" layoutY="38.0" promptText="    Rechercher" />
+               </children>
+            </AnchorPane>
+            <Text fill="#8cbeb2" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Liste des Oeuvres">
+               <font>
+                  <Font name="Futura Heavy BT" size="18.0" />
+               </font>
+            </Text>
+            <Button fx:id="add" layoutX="693.0" layoutY="543.0" mnemonicParsing="false" onAction="#ajouterOeuvre" prefHeight="35.0" prefWidth="88.0" styleClass="add-btn" text="Ajouter" />
+         </children>
+      </AnchorPane>
+   </children>
 </AnchorPane>
