--- a/src/main/resources/ModifierOeuvre.fxml
+++ b/src/main/resources/ModifierOeuvre.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -26,8 +27,9 @@
         <DatePicker fx:id="date" layoutX="334.0" layoutY="165.0" prefHeight="26.0" prefWidth="182.0" promptText="dd/mm/yyyy" />
         <Text layoutX="335.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date de publication" wrappingWidth="181.5999999999999" />
         <Button fx:id="Update" layoutX="464.0" layoutY="354.0" mnemonicParsing="false" onAction="#ModifierOeuvre" prefHeight="26.0" prefWidth="88.0" style="-fx-background-color: F3B562;" text="Modifier" />
-        <Button fx:id="reset" layoutX="370.0" layoutY="355.0" mnemonicParsing="false" onAction="#annuler" prefHeight="26.0" prefWidth="88.0" style="-fx-background-color: ffffff;"  text="Réinitialiser" textFill="#5c4d51" />
-        <Button fx:id="Importer" layoutX="71.0" layoutY="191.0" mnemonicParsing="false" onAction="#importer_image" text="Importer" />
+        <Button fx:id="reset" layoutX="370.0" layoutY="355.0" mnemonicParsing="false" onAction="#annuler" prefHeight="26.0" prefWidth="88.0" style="-fx-background-color: ffffff;" text="Réinitialiser" textFill="#5c4d51" />
+        <Button fx:id="Importer" layoutX="334.0" layoutY="200.0" mnemonicParsing="false" onAction="#importer_image" text="Importer" />
         <ComboBox fx:id="selectType" layoutX="334.0" layoutY="102.0" prefHeight="26.0" prefWidth="182.0" promptText="Séléctionner le type de l'oeuvre" />
+      <ImageView fx:id="imageView" fitHeight="117.0" fitWidth="182.0" layoutX="335.0" layoutY="226.0" pickOnBounds="true" preserveRatio="true" />
     </children>
 </AnchorPane>
