--- a/src/main/resources/ajouterPersonnes.fxml
+++ b/src/main/resources/ajouterPersonnes.fxml
@@ -2,53 +2,82 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<?import javafx.scene.image.Image?>
-<ScrollPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.InscriptionControllers">
-    <content>
-        <AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #FffffF;">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #FffffF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.InscriptionControllers">
             <children>
-                <Text fx:id="iscriL" layoutX="178.0" layoutY="71.0" lineSpacing="1.0" smooth="false" stroke="WHITE" strokeWidth="0.0" text="Ajouter un utilisateur" textAlignment="CENTER" wrappingWidth="444.3367919921875">
-                    <font>
-                        <Font name="Verdana Bold" size="35.0" />
-                    </font>
-                </Text>
-                <TextField fx:id="txtnom" layoutX="84.0" layoutY="183.0" promptText="Nom" />
-                <TextField fx:id="txtprenom" layoutX="84.0" layoutY="224.0" promptText="Prenom" />
-                <TextField fx:id="txtemail" layoutX="84.0" layoutY="265.0" promptText="E-mail" />
-                <TextField fx:id="txttel" layoutX="84.0" layoutY="348.0" promptText="Tel" />
-                <PasswordField fx:id="txtmdp" layoutX="84.0" layoutY="307.0" promptText="Mot de passe" />
-                <Button fx:id="ajouter" layoutX="490.0" layoutY="494.0" mnemonicParsing="false" onAction="#ajouter" prefHeight="35.0" prefWidth="110.0" style="-fx-background-color: rgb(140,190,178); -fx-background-radius: 10;" text="Ajouter" textFill="WHITE">
-                    <font>
-                        <Font name="Verdana Bold" size="18.0" />
-                    </font></Button>
-                <Button fx:id="annuler" layoutX="619.0" layoutY="494.0" mnemonicParsing="false" onAction="#annuler" prefHeight="30.0" prefWidth="111.0" style="-fx-background-color: rgb(240,96,96); -fx-background-radius: 10;" text="Annuler" textFill="WHITE">
-                    <font>
-                        <Font name="Verdana Bold" size="18.0" />
-                    </font></Button>
-                <Button fx:id="uploadImgBtn" layoutX="84.0" layoutY="439.0" mnemonicParsing="false" onAction="#onUploadButtonClick" prefHeight="25.0" prefWidth="150.0" text="Upload">
-                    <font>
-                        <Font name="Verdana Bold" size="12.0" />
-                    </font></Button>
-                <Button fx:id="ret" layoutX="32.0" layoutY="22.0" mnemonicParsing="false" onAction="#retour" prefHeight="25.0" prefWidth="100.0" style="-fx-background-color: rgb(243,181,98);" text="retour" textFill="WHITE">
-                    <font>
-                        <Font name="Verdana Bold" size="15.0" />
-                    </font>
-                </Button>
-            <ComboBox fx:id="choices" layoutX="83.0" layoutY="394.0" prefWidth="150.0" />
-            <ImageView fitHeight="209.0" fitWidth="250.0" layoutX="459.0" layoutY="196.0" pickOnBounds="true" preserveRatio="true" >
-                <image>
-                    <Image url="/assets/Capture_d_écran_2024-02-25_195559-removebg-preview.png"/>
-                </image>
+            <ImageView fitHeight="209.0" fitWidth="250.0" layoutX="459.0" layoutY="196.0" pickOnBounds="true" preserveRatio="true">
+               
             </ImageView>
+            <AnchorPane layoutX="388.0" prefHeight="600.0" prefWidth="414.0" styleClass="right-form" stylesheets="@loginDesign.css">
+               <children>
+                  <Label layoutX="147.0" layoutY="61.0" text="Sign in account">
+                     <font>
+                        <Font name="Futura Heavy BT" size="20.0" />
+                     </font>
+                  </Label>
+                      <TextField fx:id="txtnom" layoutX="101.0" layoutY="106.0" prefHeight="26.0" prefWidth="237.0" promptText="Nom" />
+                  <AnchorPane fx:id="main_form" layoutX="145.0" layoutY="333.0" prefHeight="118.0" prefWidth="147.0">
+                     <children>
+                            <Button fx:id="uploadImgBtn" layoutY="91.0" mnemonicParsing="false" onAction="#onUploadButtonClick" prefHeight="26.0" prefWidth="146.0" text="Upload">
+                                <font>
+                                    <Font name="Verdana Bold" size="12.0" />
+                                </font>
+                        </Button>
+                        <ImageView fx:id="imageFor" fitHeight="75.0" fitWidth="148.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true" />
+                     </children>
+                  </AnchorPane>
+                      <TextField fx:id="txtemail" layoutX="101.0" layoutY="180.0" prefHeight="26.0" prefWidth="237.0" promptText="E-mail" />
+                      <TextField fx:id="txtprenom" layoutX="101.0" layoutY="143.0" prefHeight="26.0" prefWidth="237.0" promptText="Prenom" />
+                      <TextField fx:id="txttel" layoutX="101.0" layoutY="254.0" prefHeight="26.0" prefWidth="237.0" promptText="Tel" />
+                      <PasswordField fx:id="txtmdp" layoutX="101.0" layoutY="217.0" prefHeight="26.0" prefWidth="237.0" promptText="Mot de passe" />
+                  <ComboBox fx:id="choices" layoutX="101.0" layoutY="295.0" prefHeight="26.0" prefWidth="237.0" />
+                      <Button fx:id="ajouter" layoutX="101.0" layoutY="464.0" mnemonicParsing="false" onAction="#ajouter" prefHeight="40.0" prefWidth="238.0" style="-fx-background-color: rgb(140,190,178); -fx-background-radius: 10;" text="S'inscrire" textFill="WHITE">
+                          <font>
+                              <Font name="Futura Light BT" size="18.0" />
+                          </font>
+                  </Button>
+                      <Button fx:id="annuler" layoutX="101.0" layoutY="517.0" mnemonicParsing="false" onAction="#annuler" prefHeight="39.0" prefWidth="238.0" style="-fx-background-color: rgb(240,96,96); -fx-background-radius: 10;" text="Annuler" textFill="WHITE">
+                          <font>
+                              <Font name="Futura Light BT" size="18.0" />
+                          </font>
+                  </Button>
+               </children>
+            </AnchorPane>
+            <AnchorPane prefHeight="600.0" prefWidth="390.0" styleClass="left-form" stylesheets="@loginDesign.css">
+               <children>
+                  <ImageView fitHeight="255.0" fitWidth="200.0" layoutX="86.0" layoutY="89.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@assets/Capture_d_écran_2024-02-25_195559-removebg-preview.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="17.0" layoutY="276.0" prefHeight="47.0" prefWidth="355.0" text="Bienvenue chez TunArt">
+                     <font>
+                        <Font name="Futura Bold" size="30.0" />
+                     </font>
+                  </Label>
+                      <Button fx:id="ret" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#retour" prefHeight="25.0" prefWidth="100.0" style="-fx-background-color: rgb(243,181,98);" text="retour" textFill="WHITE">
+                          <font>
+                              <Font name="Verdana Bold" size="15.0" />
+                          </font>
+                      </Button>
+                  <Label layoutX="107.0" layoutY="452.0" text="Avez-vous déja un compte">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="cnctbtn" layoutX="112.0" layoutY="474.0" mnemonicParsing="false" onAction="#seConnecter" prefHeight="26.0" prefWidth="166.0" style="-fx-background-color: f5c4b512ebbf;" stylesheets="@loginDesign.css" text="Se connecter" textFill="WHITE">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+               </children>
+            </AnchorPane>
             </children>
         </AnchorPane>
-    </content>
-</ScrollPane>
