--- a/src/main/resources/Login.fxml
+++ b/src/main/resources/Login.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -9,54 +10,47 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" onDragDetected="#mdp_ob" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.LoginController">
+<AnchorPane id="AnchorPane" onDragDetected="#mdp_ob" prefHeight="600.0" prefWidth="800.0" stylesheets="@dashboardDesign.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.LoginController">
     <children>
-        <ImageView fitHeight="600.0" fitWidth="383.0">
-
-        </ImageView>
-        <AnchorPane layoutX="36.0" layoutY="59.0" prefHeight="275.0" prefWidth="285.0">
+        <AnchorPane layoutX="400.0" layoutY="-1.0" prefHeight="600.0" prefWidth="399.0" styleClass="right-form" stylesheets="@loginDesign.css">
             <children>
-                <ImageView fx:id="logo" fitHeight="229.0" fitWidth="259.0" layoutX="28.0" layoutY="23.0">
-                    <image>
-                        <Image url="/assets/telech.jpg" />
-                    </image>
-
-                </ImageView>
+                <Text fx:id="bien" fill="#512300" layoutX="62.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="titre-grand" text="Bienvenue Chez TunArt !" textAlignment="CENTER" wrappingWidth="259.0">
+                    <font>
+                        <Font name="Futura Heavy BT" size="27.0" />
+                    </font>
+                </Text>
+                <TextField fx:id="email" layoutX="80.0" layoutY="189.0" prefHeight="46.0" prefWidth="242.0" promptText="Email" styleClass="label" />
+                <Button fx:id="cnbt" layoutX="111.0" layoutY="346.0" mnemonicParsing="false" onAction="#connect" prefHeight="40.0" prefWidth="180.0" styleClass="login-btn" text="se connecter" textFill="#51300a">
+                    <font>
+                        <Font name="Verdana Bold" size="12.0" />
+                    </font>
+                </Button>
+                <Button fx:id="cnbt1" layoutX="111.0" layoutY="406.0" mnemonicParsing="false" onAction="#inscrire" prefHeight="40.0" prefWidth="180.0" styleClass="inscrire-btn" text="s'inscrire" textFill="#512300">
+                    <font>
+                        <Font name="Verdana Bold" size="12.0" />
+                    </font>
+                </Button>
+                <PasswordField fx:id="mdp" layoutX="80.0" layoutY="259.0" prefHeight="46.0" prefWidth="242.0" promptText="mot de passe" />
             </children>
         </AnchorPane>
-        <Text fx:id="bien" fill="#512300" layoutX="454.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bienvenue Chez TunArt" textAlignment="CENTER" wrappingWidth="259.0">
-            <font>
-                <Font name="System Bold" size="20.0" />
-            </font>
-        </Text>
-        <TextField fx:id="email" layoutX="463.0" layoutY="184.0" prefHeight="25.0" prefWidth="241.0" promptText="Email" />
-        <Button fx:id="cnbt" layoutX="494.0" layoutY="283.0" mnemonicParsing="false" onAction="#connect" prefHeight="20.0" prefWidth="180.0" style="-fx-background-color: 55; -fx-background-radius: 0;"  text="se connecter" textFill="#51300a">
-            <font>
-                <Font name="Verdana Bold" size="12.0" />
-            </font>
-        </Button>
-        <Button fx:id="cnbt1" layoutX="494.0" layoutY="330.0" mnemonicParsing="false" onAction="#inscrire" prefHeight="23.0" prefWidth="180.0" style="-fx-background-color: 55; -fx-background-radius: 0;"  text="s'inscrire" textFill="#512300">
-            <font>
-                <Font name="Verdana Bold" size="12.0" />
-            </font>
-        </Button>
-        <Text layoutX="492.0" layoutY="404.0" strokeType="OUTSIDE" strokeWidth="0.0" text="mot de passe oublié?" wrappingWidth="180.0">
-            <font>
-                <Font name="System Bold Italic" size="12.0" />
-            </font>
-        </Text>
-        <Text fx:id="slogan" fill="#512300" layoutX="69.0" layoutY="391.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TunArt" wrappingWidth="285.0">
-            <font>
-                <Font name="System Bold Italic" size="20.0" />
-            </font>
-        </Text>
-        <PasswordField fx:id="mdp" layoutX="463.0" layoutY="226.0" prefHeight="25.0" prefWidth="241.0" promptText="mot de passe" />
-        <Button fx:id="icibt" layoutX="614.0" layoutY="386.0" mnemonicParsing="false" onAction="#passwrd" style="-fx-background-color: gris;" text="cliquez ici" underline="true" />
-        <ImageView fitHeight="25.0" fitWidth="38.0" layoutX="424.0" layoutY="226.0">
-
-        </ImageView>
-        <ImageView fitHeight="36.0" fitWidth="38.0" layoutX="424.0" layoutY="182.0">
-
-        </ImageView>
+        <AnchorPane layoutY="-1.0" prefHeight="606.0" prefWidth="399.0" styleClass="left-form">
+            <children>
+                <ImageView fitHeight="296.0" fitWidth="333.0" layoutX="52.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@assets/Capture_d_écran_2024-02-25_195559-removebg-preview.png" />
+                    </image>
+                </ImageView>
+                <Text fx:id="mdpoub" fill="#5c4b51" layoutX="64.0" layoutY="425.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="titre" text="mot de passe oublié?" underline="true" wrappingWidth="180.0">
+                    <font>
+                        <Font name="System Bold Italic" size="12.0" />
+                    </font>
+                </Text>
+                <Button fx:id="icibt" layoutX="210.0" layoutY="408.0" mnemonicParsing="false" onAction="#mdp_ob" style="-fx-background-color: gris;" text="cliquez ici" underline="true" />
+            </children>
+            <stylesheets>
+                <URL value="@dashboardDesign.css" />
+                <URL value="@loginDesign.css" />
+            </stylesheets>
+        </AnchorPane>
     </children>
 </AnchorPane>
