--- a/src/main/resources/Navbar.fxml
+++ b/src/main/resources/Navbar.fxml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="76.0" prefWidth="1057.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.NavbarController">
+<AnchorPane id="AnchorPane" prefHeight="76.0" prefWidth="1057.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.NavbarController">
     <children>
-        <ImageView fx:id="profileIcon" fitHeight="52.0" fitWidth="53.0" layoutX="971.0" layoutY="12.0" onMouseClicked="#openProfile">
-            <image>
-                <Image url="/assets/profile-removebg-preview.png" />
-            </image>
-        </ImageView>
+        
 
         <Text fx:id="welcomeText" fill="#787a80" layoutX="79.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome, name!">
             <font>
                 <Font name="Leelawadee UI Semilight" size="18.0" />
             </font>
         </Text>
+        <ImageView fx:id="profileIcon" fitHeight="50.0" fitWidth="44.0" layoutX="881.0" layoutY="13.0" onMouseClicked="#openProfile">
+            <image>
+                <Image url="@assets/profil-removebg-preview.png" />
+            </image>
+        </ImageView>
 
     </children>
 </AnchorPane>
