--- a/src/main/resources/AffActualiteUser.fxml
+++ b/src/main/resources/AffActualiteUser.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ActualiteU">
+<AnchorPane prefHeight="600.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ActualiteU">
     <children>
         <AnchorPane layoutX="9.0" layoutY="13.0" prefHeight="578.0" prefWidth="830.0">
             <children>
